--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroui/react": "2.7.9",
-    "@iconify/react": "latest",
+    "@heroui/react": "^2.7.9",
+    "@iconify/react": "^6.0.0",
     "framer-motion": "^11.18.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
+    "source-map-js": "^1.2.1",
     "uuid": "^9.0.1",
-    "xlsx": "^0.18.5",
-    "source-map-js": "^1.2.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@types/uuid": "^9.0.8",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "10.4.20",
-    "tailwindcss": "3.4.17",
-    "postcss": "8.4.49",
-    "typescript": "5.7.3",
-    "vite": "^6.0.11",
     "@babel/core": "^7.26.10",
     "@babel/generator": "^7.27.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.27.0",
     "@babel/traverse": "^7.27.0",
-    "@babel/types": "^7.27.0"
+    "@babel/types": "^7.27.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.7.3",
+    "vite": "^6.0.11"
   }
 }
